viewport fix on mobiles

--- a/css/expdb.css
+++ b/css/expdb.css
@@ -1764,6 +1764,7 @@ html, body {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    width: auto !important;  /* Firefox will set width as auto */
+   min-width: 480px; /* suppose you want minimun width of 1000px */
    background-color: #ececec;
 }
 
